# django-ninja-project-stucture

./: .env.example  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  sts-db
.github/workflows/: main.yml
apps/core/: api.py
apps/core/schema/: hello_schema.py
config/: api.py  settings.py  urls.py
